--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,7 @@
 @(message: String)
 
 @main("Welcome to Play 2.1") {
-    
+    <script type="application/javascript" src="@routes.Assets.at("javascripts/app/app.js")"></script>
     @play20.welcome(message)
     
 }
