--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -11,7 +11,9 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
         @*ext 4 support*@
         <link rel="stylesheet" href="@routes.Assets.at("stylesheets/ext/resources/css/ext-all.css")">
+
         <script src="@routes.Assets.at("javascripts/ext/ext-all.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/ext/locale/ext-lang-zh_CN.js")" type="text/javascript"></script>
     </head>
     <body>
         @content
