添加心跳验证

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @(message: String)
 
-@main("Welcome to Play 2.1") {
+@main("技术支持单系统") {
     <script type="application/javascript" src="@routes.Assets.at("javascripts/app/app.js")"></script>
 
 }
