解决checkbox 提交时候值为bool的问题.继承checkbox复写getValue函数

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,4 +3,5 @@
 @main("技术支持单系统") {
     <script type="application/javascript" src="@routes.Assets.at("javascripts/app/app.js")"></script>
     <script type="application/javascript" src="@routes.Assets.at("javascripts/app/component/VTypes.js")"></script>
+    <script type="application/javascript" src="@routes.Assets.at("javascripts/app/component/CustomComponents.js")"></script>
 }
