--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,7 @@
 @(message: String)
 
 @main("技术支持单系统") {
-    <script type="application/javascript" src="@routes.Assets.at("javascripts/app/app.js")"></script>
-    <script type="application/javascript" src="@routes.Assets.at("javascripts/app/component/VTypes.js")"></script>
-    <script type="application/javascript" src="@routes.Assets.at("javascripts/app/component/CustomComponents.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/app/app.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/app/component/VTypes.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("javascripts/app/component/CustomComponents.js")"></script>
 }
